--- a/package.json
+++ b/package.json
@@ -3,12 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
+    "@material-ui/core": "^5.0.0-beta.5",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.23.0",
+    "bootstrap": "^5.1.1",
+    "firebase": "^4.8.0",
+    "json-server": "^0.17.0",
+    "nodemon": "^2.0.13",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.0-rc.0",
+    "react-bootstrap-table": "^4.3.1",
+    "react-calendar": "^3.4.0",
     "react-dom": "^17.0.2",
+    "react-google-charts": "^3.0.15",
+    "react-horizontal-strip-datepicker": "^3.0.2",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "reactstrap": "^8.10.0",
+    "styled-components": "^5.3.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -34,5 +50,18 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "App.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/shahnawaz-ayon/LoanApp.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/shahnawaz-ayon/LoanApp/issues"
+  },
+  "homepage": "https://github.com/shahnawaz-ayon/LoanApp#readme"
 }
